BuildHughes/translation-tool/inputs/source_meta/objects/Communication_Preference__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CommunicationPreferences</relationshipLabel>
        <relationshipName>CommunicationPreferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Communication_Preference_Value__c</fullName>
        <label>Communication Preference Value</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Communication_Type__c</fullName>
        <label>Communication Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Postal_Mail_Required_for_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Postal Mail Required for Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Postal_Mail_Required_for_Service_Cont__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Postal Mail Required for Service Cont</label>
        <type>Checkbox</type>
    </fields>
    <label>Communication Preference</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ComPref-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CommunicationPreferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>